--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_CURRENCY = '₹'
-VITE_BACKEND_URL = 'https://doctor-backend-1-pbd3.onrender.com'
+VITE_BACKEND_URL = 'https://doctor-backend-nt74.onrender.com'
